# in_silico_framework

./: .gitignore  .readthedocs.yaml  Interface.py  README.md  bibliography.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  searchindex.js
.github/: monitor_resources.ps1
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_windows
.github/scripts/: launch_dask.ps1  launch_dask.sh
.github/workflows/: build-isf.yml  deploy-docs.yml  test-IBS.yml  test-isf-py27-local.yml  test-isf-py38-local.yml  test-isf-py38-pixi-linux.yml  test-isf-py38-pixi-macos.yml  test-isf-py38-pixi-windows.yml  test-isf-py39-local.yml
IO/: IO.py  __init__.py
Interface/: __init__.py
SLURM_scripts/: launch_dask_on_SOMA_a100_interactive_1_reduced_resources.sh  launch_dask_on_SOMA_a100_riekearco.sh  launch_dask_on_SOMA_cpu_15.sh  launch_dask_on_SOMA_gpu_15.sh  launch_dask_on_SOMA_gpu_long_1_cuda102.sh  launch_dask_on_SOMA_gpu_long_1_no_gpus.sh  setup_SLURM.py  setup_locking_server.py  submit.sh
SLURM_scripts/SLURM_scripts/: launch_dask_on_SOMA_cpu_10.sh  launch_dask_on_SOMA_cpu_30.sh  launch_dask_on_SOMA_develop.sh  reservation_1CPU.sh  setup_locking_server.py
_static/: sphinx_immaterial_theme.2d7f013d36e4da932.min.css
autoapi/Interface/: _is_running_on_dask_worker.html  get_client.html  index.html  print_module_versions.html
autoapi/biophysics_fitting/: connected_to_dend_beyond.html  get_branching_depth.html  get_branching_depth_series.html  get_first_order_bifurcation_sections.html  get_inner_sec_dist_list.html  get_main_bifurcation_section.html  index.html
autoapi/data_base/: index.html
autoapi/simrun/: index.html
autoapi/single_cell_parser/: Event.html  create_cell.html  index.html  init_neuron_run.html  sec_distance_to_soma.html  spines_update_network_paramfile.html  spines_update_synapse_distribution_file.html
autoapi/singlecell_input_mapper/: index.html
autoapi/spike_analysis/: index.html
autoapi/visualize/: index.html  plot_hoc.html  svg2emf.html
biophysics_fitting/: L5tt_parameter_setup.py  hay_evaluation.py  model_selection.py  optimizer.py
biophysics_fitting/exploration_from_seedpoint/: RW.py  utils.py
biophysics_fitting/hay/: default_setup.py  evaluation.py
compatibility/: __init__.py
config/: __init__.py  data_base_settings.py  db_settings.json  isf_configure.py  isf_logging.py
data_base/: __init__.py  data_base.py  data_base_register.py  dbopen.py  distributed_lock.py  isf_data_base.py  settings.py  utils.py
data_base/IO/: __init__.py
data_base/db_initializers/: PSPs.py  prepare_ANN_batches.py  somatic_summation_model.py  synapse_activation_binning.py
data_base/isf_data_base/: isf_data_base.py
data_base/model_data_base/: model_data_base.py
docs/: api_reference.rst  conf.py  index.rst  installation.rst
docs/rst_assets/: installation.rst
docs/utils/: parse_notebooks.py  skip_doc.py  sphinx_hooks.py
getting_started/: __init__.py  getting_started_linked_views.ipynb
getting_started/radii/: debug.py  profiling.ipynb  transform.py  trn2.py
ibs_projects/: README.md  recurrent_reduced_model_networks.py  reduced_model_output_paper.py  reproducing_L6paper.py
ibs_projects/biophysical_models/: RW_analysis.py  RW_initialization.py  __init__.py  databases.py  energy_calculations.py  utils.py
ibs_projects/bottleneck_models/: run.py
ibs_projects/bottleneck_project/: viz.py
ibs_projects/compatibility/: __init__.py  module_compatibility.py
ibs_projects/decoding/: RM_generation.py  concat_pdfs.py  plots.py  simulations_for_RM_generation.py
ibs_projects/hot_zone/: on_demand_simulations.py  subcellular_compartmemnts.py
ibs_projects/new_biophysical_constraints/: hyperpolarizing.py  objectives.py
ibs_projects/whisking_and_active_touch/: functions.py  variables.py  visualization.py
installer/: init.bat  init.sh  init_hook.py
installer/py2.7/: install.sh
installer/py3.8/: install.sh
installer/py3.8-miniforge/: install.sh
installer/py3.9/: install.sh  pip_requirements.txt
isf_data_base/: distributed_lock.py
mechanisms/: __init__.py
mechanisms/l5pt/: __init__.py  mech_parse.py
mechanisms/mechs_crnrn/: k2syn.mod  nmda2_schiller.mod
model_data_base/: distributed_lock.py  mdbopen.py  model_data_base.py  utils.py
project_specific_ipynb_code/: reproducing_L6paper.py
radii/: IO.py  analysisTools.py  exRadSets.py  radiiPipeline.py
robinweiler/: GB_opt.ipynb  GB_synapse.py
rst_assets/: api_reference.html  cards.html  file_formats.html  installation.html  isf_overview.html  paramfile_overview.html  tutorials.html
rw/: __init__.py  rw.py
simrun/: generate_synapse_activations.py  parameters_to_cell.py  rerun_db.py  seed_manager.py  sim_trial_to_cell_object.py  somatic_summation_model.py  utils.py
simrun2/: parameters_to_cell.py  rerun_mdb.py  run_new_simulations.py  sim_trail_to_cell_object.py
simrun3/: synaptic_strength_fitting.py
single_cell_parser/: __init__.py  cell_parser.py  network.py  parameters.py  serialize_cell.py
spike_analysis/: core.py
tests/: __init__.py  conftest.py  context.py  dask_config.yml  dask_setup.py  pytest.ini
thickness/: Data.py  IO.py  pipeline.py  pipeline2.py  thickness.py  transformation.py  utils.py
transformTools/: exTrMatrix.py
visualize/: README.md  cell_morphology_visualizer.py  cell_to_ipython_animation.py  utils.py
(+2664 files in other folders)
